[tool.poetry]
name = "conteda"
version = "0.1.0"
description = "Continual Test-time Domain Adaptation"
authors = ["Haokun Chen"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9"
torch = ">=1.13.0"
torchvision = ">=0.14.0"
scipy = ">=1.9.3"
pandas = ">=1.3.5"
tqdm = ">=4.64.1"
scikit-learn = ">=1.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
